# fastapi-boilerplate

./: .env.example  README.md  main.py  pyproject.toml  splinter.yaml
apps/jobs/: app.py  container.py
apps/jobs/controllers/: __init__.py  jobs.py
apps/jobs/services/: __init__.py  jobs.py
apps/jobs/validators/: __init__.py  create_job.py  update_job.py
apps/users/: app.py  container.py
apps/users/controllers/: __init__.py  user.py
apps/users/services/: __init__.py  users.py
apps/users/validators/: __init__.py  create_user.py  update_user.py  user.py
config/: __init__.py  app.py  database.py
config/utils/: resolve.py
migrations/: 1676731094599205_create_users_table.sql  1679077537322008_create_jobs_table.sql
pkgs/common/models/: user.py
pkgs/common/transformers/: __init__.py  jobs.py  users.py
pkgs/common/validators/: __init__.py  jobs.py
pkgs/core/: __init__.py  container.py
pkgs/core/database/: __init__.py  basemodel.py  database.py  repository.py
pkgs/core/http/: __init__.py  create_router.py  create_server.py  exception.py  request.py  response.py
pkgs/core/transformer/: __init__.py  decorator.py  parser.py  transformer.py
pkgs/core/validators/: __init__.py  base.py  decorator.py
pkgs/jobs/: __init__.py  container.py
pkgs/jobs/models/: __init__.py  job.py
pkgs/jobs/repositories/: __init__.py  jobs.py
pkgs/jobs/services/: __init__.py  jobs.py
pkgs/users/: __init__.py  container.py
pkgs/users/models/: user.py
pkgs/users/repositories/: __init__.py  users.py
pkgs/users/services/: __init__.py  users.py
